--- a/bio.html
+++ b/bio.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link type="text/css" rel="stylesheet" href="/css/styles.css"/>
   <link type="text/css" rel="stylesheet" href="/css/materialize.css"  media="screen,projection"/>
-  <link type="text/css" rel="stylesheet" href="/css/index.css"/>
+  <link type="text/css" rel="stylesheet" href="/css/bio.css"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 
 </head>
 <body>
-  <div class="intro deep-purple lighten-1 z-depth-1">
+<div class="intro deep-purple lighten-1 z-depth-1">
   <h1 class="grey-text text-lighten-5">
     Wilka Torrico de Carvalho
   </h1>
@@ -27,7 +27,7 @@
     <img src="../img/brain-icon.png">
   </div>
 </div>
-  <nav> 
+<nav> 
   <div class="nav-wrapper grey darken-3 z-depth-1">
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
@@ -45,59 +45,21 @@
   </div>
 </nav>
 
-  <!-- Small About -->
-  <div class="container myself">
-    <div class="col s12 m4 l4">
-      <div class="card">
-      <img class="me_nsf responsive-img" src="img/me_nsf.jpeg">
-        <h5>
-          I am a computer science masters student at the <a href="http://www.usc.edu">University of Southern California</a>.
-          I studied physics for my bachelors at <a href="http://www.stonybrook.edu/">Stony Brook University</a>.
-          You can explore this page to learn more about me.
-        </h5>
-        <br><br><br><br><br><br><br><br><br><br>
-        <div class="card-content grey-text text-darken-3 summary">
-          <h5>There are two main things I like to do</h5>
-          <ul class="collapsible" data-collapsible="accordian">
-            <li>
-              <div class="collapsible-header center">
-                Think about the brain
-              </div>
-              <div class="collapsible-body">
-                <p>
-                  I think the brain is <span class="red-text text-accent-4"> <b> beautiful </b> </span>.
-                  It is the most sophisticated autonomous system known to existence.
-                  All technology and knowledge that we know is the result of  brains operating on the world's information. 
-                </p>
-                <p>
-                  My own attempt to understand the brain is, ultimately, a brain trying to understand, at least for me, itself. <span class="red-text text-accent-4" style="font-weight: bold"> Just beautiful. </span>
-                  You can learn more about my interest in the brain and how my brain intends to try to understand itself <a href="research_interests.html"> here</a>. 
-                </p>
-              </div>
-            </li>
-            <li>
-              <div class="collapsible-header center">
-                Help others navigate this world
-              </div>
-              <div class="collapsible-body">
-                <p>
-                  Throughout my life, I have found advice, guidance, and mentorship from those more experienced than myself to be invaluable to my success. 
-                  <br><br>
-                  Here, I hope to "pay it forward." I share what I've learned about things like applying to <b> summer research </b> as an undergraduate, developing effective <b> time and task management system </b> skills, etc.
-                  
-                  You can find more <a href="advice.html">here</a>.
-                  </p>
-              </div>
-            </li>
-          </ul>
-        <h6> <a href="blog.html">I also enjoy writing about various things.</a></h6>
+<div class="center container">
+<h2>Brief Bio</h2>
+</div>
 
-        </div>
-      </div>
-    </div>
-  </div>
-
-
+<div class="container">
+<div class="col s12 m4 l4">
+<div class="card">
+<div class="card-content grey-text text-darken-3">
+<p>
+Hello
+</p>
+</div>
+</div>
+</div>
+</div>
 
 <footer class="page-footer">
   <div class="container footer grey darken-3 z-depth-1">
