--- a/bio.html
+++ b/bio.html
@@ -3,6 +3,7 @@
 <head>
   <title>Wilka Carvalho</title>
 
+  <meta charset="utf-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link type="text/css" rel="stylesheet" href="/css/styles.css"/>
   <link type="text/css" rel="stylesheet" href="/css/materialize.css"  media="screen,projection"/>
