--- a/bio.html
+++ b/bio.html
@@ -59,6 +59,17 @@ More coming soon...
 </div>
 </div>
 </div>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-47674613-1', 'joshualande.com');
+  ga('send', 'pageview');
+
+</script>
 <footer class="page-footer">
   <div class="container footer grey darken-3 z-depth-1">
     <!-- <div class="row"> -->
