--- a/bio.html
+++ b/bio.html
@@ -52,9 +52,25 @@
 <div class="col s12 m4 l4">
 <div class="default card">
 
-I studied physics for my bachelors at <a href="http://www.stonybrook.edu/">Stony Brook University</a>.
+<h4 id="birth-of-interests">Birth of Interests</h4>
+<p>I spent the first 6 years of my life in Bolivia, living with local indigenous groups as my mother conducted ethnography research. Afterwards, we moved to New York City (NYC). Because of the physical and cultural differences between my white-american peers and me, I experienced social exlcusion. Combined with my parent’s constant emphasis on understanding people’s thoughts and behaviors as a result of their environment(s) and experiences, I developed an interest in understanding how the “individual” is created. This ultimately became an interest in how the mind is able to efficiently and effectively parse massive amounts of information and provide our intelligent behavior.</p>
 
-More coming soon...
+<h4 id="development">Development</h4>
+<p>While in NYC, I was fortunate to attend <a href="https://en.wikipedia.org/wiki/Brooklyn_Technical_High_School">Brooklyn Technical High School</a>, where, through the applied physics major, I discovered my disposition towards analytic and axiomatic reasoning. </p>
+
+<p>Afterwards, I attended <a href="http://www.stonybrook.edu/">Stony Brook University</a> for my undergrad, where I decided to pursue a physics major in order to pursue theoretical neuroscience. Inspired by theoretical neuroscientist <a href="http://www.klab.caltech.edu/koch/">Christof Koch</a>, I looked forward to some future reducing the brain’s information processing to neural activity. After exploring research projects in neural engineering, cognitive neuroscience, and computational neuroscience, I realized that my interest was ultimately in what algorithms the brain uses to parse information.
+In my senior year, I was fortunate to</p>
+
+<ol>
+  <li>be named <a href="http://sb.cc.stonybrook.edu/happenings/homespotlight/ureca-researcher-of-the-month-wilka-carvalho/">researcher of the month</a></li>
+  <li>win the Provost’s graduating award and</li>
+  <li>win the <a href="http://sb.cc.stonybrook.edu/happenings/student-spotlight/2015-nsf-graduate-research-fellow-wilka-carvalho/">NSF Graduate Research Fellowship</a></li>
+</ol>
+
+<p>which I used to switch to pursue a masters in computer science at the <a href="http://www.usc.edu">University of Southern California</a> in order to pursue research trying to discover the brain’s algorithms.</p>
+
+<h4 id="current">Current</h4>
+
 
 </div>
 </div>
