--- a/bio.html
+++ b/bio.html
@@ -67,7 +67,7 @@ In my senior year, I was fortunate to</p>
   <li>win the <a href="http://sb.cc.stonybrook.edu/happenings/student-spotlight/2015-nsf-graduate-research-fellow-wilka-carvalho/">NSF Graduate Research Fellowship</a></li>
 </ol>
 
-<p>which I used to switch to pursue a masters in computer science at the <a href="http://www.usc.edu">University of Southern California</a> in order to pursue research trying to discover the brain’s algorithms.</p>
+<p>which I used to pursue a masters in computer science at the <a href="http://www.usc.edu">University of Southern California</a> in order to pursue research trying to discover the brain’s algorithms.</p>
 
 <h4 id="current">Current</h4>
 
