--- a/bio.html
+++ b/bio.html
@@ -58,7 +58,7 @@
 <h4 id="development">Development</h4>
 <p>While in NYC, I was fortunate to attend <a href="https://en.wikipedia.org/wiki/Brooklyn_Technical_High_School">Brooklyn Technical High School</a>, where, through the applied physics major, I discovered my disposition towards analytic and axiomatic reasoning. </p>
 
-<p>Afterwards, I attended <a href="http://www.stonybrook.edu/">Stony Brook University</a> for my undergrad, where I decided to pursue a physics major in order to pursue theoretical neuroscience. Inspired by theoretical neuroscientist <a href="http://www.klab.caltech.edu/koch/">Christof Koch</a>, I looked forward to some future reducing the brain’s information processing to neural activity. After exploring research projects in neural engineering, cognitive neuroscience, and computational neuroscience, I realized that my interest was ultimately in what algorithms the brain uses to parse information.
+<p>Afterwards, I attended <a href="http://www.stonybrook.edu/">Stony Brook University</a> for my undergrad, where I decided to pursue a physics major in order to pursue theoretical neuroscience. Inspired by <a href="http://www.klab.caltech.edu/koch/">Christof Koch</a> redcuctionist approach, I looked forward to some future reducing the brain’s information processing to neural activity. After exploring research projects in neural engineering, cognitive neuroscience, and computational neuroscience, I realized that my interest was ultimately in what algorithms the brain uses to parse information.
 In my senior year, I was fortunate to</p>
 
 <ol>
