--- a/bio.html
+++ b/bio.html
@@ -64,6 +64,24 @@
 
 <h4 id="current">Current</h4>
 
+<p>At this point in life, the following questions are  recurrent themes in my thoughts, </p>
+
+<ol>
+  <li>“how does the brain use populations of neurons to both parse and represent information?”</li>
+  <li>If control is decentralized, is it at the neuronal network level or or the neuron level? </li>
+  <li>What algorithms allow decentralized information-processing to culminate into a capable - and seemingly singular - autonomous agent?</li>
+</ol>
+
+<p>I intend to explore these questions by following work in fields like neuroscience and cognitive science, and using this knowledge to find or discover general learning and information-processing algorithms plausible for the brain. </p>
+
+<p>Ideally I will test hypothesis by building and studying models that incorporate reinforcement learning, neural networks, and graphs to store and a parse information.</p>
+
+<p>This interest manifests in many fields. Besides those mentioned, others include: <br />
+  • Knowledge representation <br />
+  • Unsupervised learning <br />
+  • Natural language processing <br />
+  • Computer vision <br /></p>
+
 
 </div>
 </div>
