--- a/bio.html
+++ b/bio.html
@@ -72,9 +72,8 @@
   <li>What algorithms allow decentralized information-processing to culminate into a capable - and seemingly singular - autonomous agent?</li>
 </ol>
 
-<p>I intend to explore these questions by following work in fields like neuroscience and cognitive science, and using this knowledge to find or discover general learning and information-processing algorithms plausible for the brain. </p>
-
-<p>Ideally I will test hypothesis by building and studying models that incorporate reinforcement learning, neural networks, and graphs to store and a parse information.</p>
+<p>I intend to explore these questions by following work in fields like neuroscience and cognitive science, and using this knowledge to find or discover general learning and information-processing algorithms plausible for the brain. 
+Ideally I will test hypothesis by building and studying models that incorporate reinforcement learning, neural networks, and graphs to store and a parse information.</p>
 
 <p>This interest manifests in many fields. Besides those mentioned, others include: <br />
   • Knowledge representation <br />
